add asr post-proc, docs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,10 @@
     "argmax",
     "autohide",
     "autorefs",
+    "Bertsclstm",
+    "bertscrnn",
     "bfill",
+    "Cnnlstm",
     "codehilite",
     "containerfile",
     "cpus",
@@ -32,6 +35,8 @@
     "deepface",
     "devel",
     "distil",
+    "Elmosclstm",
+    "elmoscrnn",
     "ffill",
     "ffpyplayer",
     "fillna",
@@ -50,6 +55,8 @@
     "mklink",
     "multimodal",
     "nans",
+    "Nestedlstm",
+    "NEUSPELL",
     "ngram",
     "NONKEY",
     "nosemgrep",
@@ -59,6 +66,8 @@
     "onnxruntime",
     "openai",
     "playsound",
+    "probwordnoise",
+    "pszemraj",
     "PUNKT",
     "pymdownx",
     "PYTHONUNBUFFERED",
@@ -66,6 +75,12 @@
     "repr",
     "safetensors",
     "samplerate",
+    "Sclstm",
+    "Sclstmbert",
+    "Sclstmelmo",
+    "scrnn",
+    "scrnnbert",
+    "scrnnelmo",
     "segs",
     "serengil",
     "silenceremove",
@@ -75,6 +90,7 @@
     "softmax",
     "soundfile",
     "startfile",
+    "subwordbert",
     "superfences",
     "SYSTRAN",
     "termynal",
