--- a/deploy/k8s/alive-models/values.yaml
+++ b/deploy/k8s/alive-models/values.yaml
@@ -53,6 +53,7 @@ env:
   ALIVE_MODELS_METRICS_PORT: 8002
   ALIVE_MODELS_SAGEMAKER_PORT: 8080
   ALIVE_MODELS_ASR_MODEL_SIZE: distil-large-v3
+  ALIVE_MODELS_ASR_CORRECTION_MODEL: subwordbert-probwordnoise
   ALIVE_MODELS_FER_MODEL_DETECTOR_BACKEND: yolov8
   ALIVE_MODELS_FER_MODEL_FACE_MIN_CONFIDENCE: 0.7
   ALIVE_MODELS_SER_MODEL_REPO: hughlan1214/Speech_Emotion_Recognition_wav2vec2-large-xlsr-53_240304_SER_fine-tuned2.0
