--- a/.env.example
+++ b/.env.example
@@ -68,8 +68,9 @@ CONTAINER_IMAGE=localhost:5000/alive_models
 # the name to use for compose or plain docker/podman commands
 CONTAINER_NAME=alive_models
 # leave the tag empty to make one based on the base nvcr.io/nvidia/... image (cuda version)
-# e.g. generated: CONTAINER_TAG=0.0.1-cuda-12.4.1
-CONTAINER_TAG=0.0.1
+# e.g. generated (cuda) tag: 12.4.1-devel-ubuntu22.04
+# generated: CONTAINER_TAG=0.0.1-cuda-12.4.1
+CONTAINER_TAG=0.0.1-cuda-12.4.1
 # tags for base image:
 # https://catalog.ngc.nvidia.com/orgs/nvidia/containers/cuda/tags
 # nvcr.io/nvidia/cuda:12.4.1-devel-ubuntu22.04
