asr: add grammarly/coedit for post-processing

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,9 @@ ALIVE_MODELS_SAGEMAKER_PORT=8080
 # things we might want to change (regarding the models to use)
 #
 ALIVE_MODELS_ASR_MODEL_SIZE=distil-large-v3
-ALIVE_MODELS_ASR_CORRECTION_MODEL=none
+# use none to skip correction, else, use a hf repo id
+# for example: grammarly/coedit-xl
+ALIVE_MODELS_ASR_CORRECTION_MODEL=grammarly/coedit-large
 ALIVE_MODELS_FER_MODEL_DETECTOR_BACKEND=yolov8
 ALIVE_MODELS_FER_MODEL_FACE_MIN_CONFIDENCE=0.7
 ALIVE_MODELS_SER_MODEL_REPO=hughlan1214/Speech_Emotion_Recognition_wav2vec2-large-xlsr-53_240304_SER_fine-tuned2.0
