--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
     "bfill",
     "Cnnlstm",
     "codehilite",
+    "coedit",
     "containerfile",
     "cpus",
     "crossrefs",
@@ -39,6 +40,7 @@
     "frombuffer",
     "ftspeech",
     "gitgnored",
+    "grammarly",
     "hotwords",
     "httpx",
     "huggingface",
