--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
     "ftspeech",
     "gitgnored",
     "grammarly",
+    "gstreamer's",
     "hotwords",
     "httpx",
     "huggingface",
@@ -58,6 +59,7 @@
     "onnx",
     "onnxruntime",
     "openai",
+    "playbin",
     "playsound",
     "probwordnoise",
     "pszemraj",
