--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,6 @@ dependencies = [
     'cython==3.0.10',
     'deepface==0.0.92',
     'faster-whisper==1.0.2',
-    'librosa==0.10.2.post1',
     'numpy',
     'nltk==3.8.1',
     'nvidia-pytriton==0.5.5; platform_system == "Linux" and platform_machine == "x86_64"',
@@ -34,8 +33,6 @@ dependencies = [
     'onnxruntime-gpu==1.18.0',
     'openai-whisper==20231117',
     'optimum==1.20.0',
-    'pandas',
-    'soundfile==0.12.1',
     'tensorflow==2.16.1',
     'tf-keras==2.16.0',
     'torch==2.3.1',
@@ -54,7 +51,6 @@ dev = [
     'flake8==7.0.0',
     'isort==5.13.2',
     'mypy==1.10.0',
-    'pandas-stubs==2.2.2.240514',
     'pre-commit==3.7.1',
     'pydocstyle==6.3.0',
     'pylint==3.2.3',
@@ -62,7 +58,7 @@ dev = [
     'python-dotenv==1.0.1',
     'ruff==0.4.8',
     'toml==0.10.2',
-    'types-PyYAML==6.0.12.20240311',
+    'types-PyYAML==6.0.12',
     'types-toml==0.10.8.20240310',
     'yamllint==1.35.1',
 ]
