--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,12 +21,12 @@ classifiers = [
     'Topic :: Scientific/Engineering :: Web Services',
 ]
 dependencies = [
-    'accelerate==0.30.1',
+    # additional: MAX_JOBS=4 pip install flash-attn --no-build-isolation
+    'accelerate==0.31.0',
     'ctranslate2==4.2.1',
     'cython==3.0.10',
-    'deepface==0.0.91',
+    'deepface==0.0.92',
     'faster-whisper==1.0.2',
-    'librosa==0.10.2.post1',
     'numpy',
     'nltk==3.8.1',
     'nvidia-pytriton==0.5.5; platform_system == "Linux" and platform_machine == "x86_64"',
@@ -34,14 +34,12 @@ dependencies = [
     'onnxruntime-gpu==1.18.0',
     'openai-whisper==20231117',
     'optimum==1.20.0',
-    'pandas',
-    'soundfile==0.12.1',
     'tensorflow==2.16.1',
     'tf-keras==2.16.0',
-    'torch==2.3.0',
-    'torchaudio==2.3.0',
-    'transformers>=4.39.3',
-    'ultralytics==8.2.28',
+    'torch==2.3.1',
+    'torchaudio==2.3.1',
+    'transformers>=4.41.2',
+    'ultralytics==8.2.31',
 ]
 [project.urls]
 homepage = 'https://thingenious.github.io/alive-models/'
@@ -54,15 +52,14 @@ dev = [
     'flake8==7.0.0',
     'isort==5.13.2',
     'mypy==1.10.0',
-    'pandas-stubs==2.2.2.240514',
     'pre-commit==3.7.1',
     'pydocstyle==6.3.0',
-    'pylint==3.2.2',
+    'pylint==3.2.3',
     'pylint-exit==1.2.0',
     'python-dotenv==1.0.1',
-    'ruff==0.4.7',
+    'ruff==0.4.8',
     'toml==0.10.2',
-    'types-PyYAML==6.0.12.20240311',
+    'types-PyYAML==6.0.12',
     'types-toml==0.10.8.20240310',
     'yamllint==1.35.1',
 ]
@@ -70,8 +67,8 @@ docs = [
   'mike==2.1.1',
   'mdx_truly_sane_lists==1.3',
   'mkdocs==1.6.0',
-  'mkdocs-include-markdown-plugin==6.0.7',
-  'mkdocs-material==9.5.25',
+  'mkdocs-include-markdown-plugin==6.2.0',
+  'mkdocs-material==9.5.26',
   'mkdocs-open-in-new-tab==1.0.3',
   'mkdocstrings[crystal,python]==0.25.1',
 ]
