--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,25 +21,39 @@ classifiers = [
     'Topic :: Scientific/Engineering :: Web Services',
 ]
 dependencies = [
-    # additional: MAX_JOBS=4 pip install flash-attn --no-build-isolation
+    # additional (in Containerfile):
+    #  - MAX_JOBS=4 pip install flash-attn --no-build-isolation
+    #  - pip install git+https://github.com/huggingface/parler-tts.git
+    #  - for omegaconf: PyYAML (>=5.1.*):
+    #        .* suffix can only be used with `==` or `!=` operators.
+    # one can git clone, checkout to 2.0.6, change '>=5.1.*' to '>=5.1' and install it:
+    #   $> git clone https://github.com/omry/omegaconf -b v2.0.6
+    #   $> sed -i 's/PyYAML>=5.1.*/PyYAML>=5.1/' omegaconf/requirements/base.txt
+    #   $> pip install ./omegaconf
     'accelerate==0.31.0',
-    'ctranslate2==4.2.1',
+    'ctranslate2==4.3.1',
     'cython==3.0.10',
     'deepface==0.0.92',
-    'faster-whisper==1.0.2',
+    'fairseq==0.12.2',
+    'faster-whisper==1.0.3',
+    'fasttext==0.9.3',
+    'g2p-en==2.1.0',
     'numpy',
     'nltk==3.8.1',
-    'nvidia-pytriton==0.5.5; platform_system == "Linux" and platform_machine == "x86_64"',
+    'orjson==3.10.5',
+    'nvidia-pytriton==0.5.8; platform_system == "Linux" and platform_machine == "x86_64"',
+    'omegaconf==2.0.6',
     'onnx==1.16.1',
-    'onnxruntime-gpu==1.18.0',
+    'onnxruntime-gpu==1.18.1',
     'openai-whisper==20231117',
     'optimum==1.20.0',
-    'tensorflow==2.16.1',
+    'soundfile==0.12.1',
+    'tensorflow==2.16.2',
     'tf-keras==2.16.0',
     'torch==2.3.1',
     'torchaudio==2.3.1',
-    'transformers>=4.41.2',
-    'ultralytics==8.2.31',
+    'ultralytics==8.2.48',
+    'whisperspeech==0.8',
 ]
 [project.urls]
 homepage = 'https://thingenious.github.io/alive-models/'
@@ -47,35 +61,35 @@ repository = 'https://github.com/thingenious/alive-models.git'
 [project.optional-dependencies]
 dev = [
     'autoflake==2.3.1',
-    'bandit==1.7.8',
+    'bandit==1.7.9',
     'black==24.4.2',
-    'flake8==7.0.0',
+    'flake8==7.1.0',
     'isort==5.13.2',
-    'mypy==1.10.0',
+    'mypy==1.10.1',
     'pre-commit==3.7.1',
     'pydocstyle==6.3.0',
-    'pylint==3.2.3',
+    'pylint==3.2.5',
     'pylint-exit==1.2.0',
     'python-dotenv==1.0.1',
-    'ruff==0.4.8',
+    'ruff==0.5.0',
     'toml==0.10.2',
     'types-PyYAML==6.0.12',
     'types-toml==0.10.8.20240310',
     'yamllint==1.35.1',
 ]
 docs = [
-  'mike==2.1.1',
+  'mike==2.1.2',
   'mdx_truly_sane_lists==1.3',
   'mkdocs==1.6.0',
-  'mkdocs-include-markdown-plugin==6.2.0',
-  'mkdocs-material==9.5.26',
+  'mkdocs-include-markdown-plugin==6.2.1',
+  'mkdocs-material==9.5.27',
   'mkdocs-open-in-new-tab==1.0.3',
   'mkdocstrings[crystal,python]==0.25.1',
 ]
 examples = [
-  'av==12.1.0',
+  'av==12.2.0',
   'httpx==0.27.0',
-  'Pillow==10.3.0',
+  'Pillow==10.4.0',
   'playsound==1.3.0',
   'pygobject==3.48.2',
 ]
