add tts and lid

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
     "argmax",
     "autohide",
     "autorefs",
+    "bettertransformer",
     "bfill",
     "Cnnlstm",
     "codehilite",
@@ -34,20 +35,27 @@
     "deepface",
     "devel",
     "distil",
+    "fairseq",
+    "fastspeech",
+    "fasttext",
     "ffill",
     "ffpyplayer",
     "fillna",
     "frombuffer",
     "ftspeech",
     "gitgnored",
+    "glotlid",
     "grammarly",
     "gstreamer's",
+    "hifigan",
     "hotwords",
     "httpx",
     "huggingface",
     "hughlan",
     "imshow",
+    "ljspeech",
     "logprob",
+    "Matthijs",
     "mklink",
     "multimodal",
     "nans",
@@ -59,6 +67,7 @@
     "onnx",
     "onnxruntime",
     "openai",
+    "parler",
     "playbin",
     "playsound",
     "probwordnoise",
@@ -67,6 +76,7 @@
     "pymdownx",
     "PYTHONUNBUFFERED",
     "pytriton",
+    "ratecv",
     "repr",
     "safetensors",
     "samplerate",
@@ -78,6 +88,9 @@
     "softcatala",
     "softmax",
     "soundfile",
+    "speecht",
+    "spkr",
+    "spkrs",
     "startfile",
     "superfences",
     "SYSTRAN",
@@ -90,6 +103,8 @@
     "venv",
     "VOXPOPULI",
     "xlsr",
+    "xvector",
+    "xvectors",
     "yolov"
   ],
   "[jsonc]": {
