--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # ####################################################################
 # App Config
 # ####################################################################
-ALIVE_MODELS=asr,fer,ser,nlp
+ALIVE_MODELS=asr,fer,ser,nlp,tts
 # comma separated list of models to load
 # empty string means load all models
 # depending on the gpu memory and the models,
@@ -22,7 +22,20 @@ ALIVE_MODELS_FER_MODEL_FACE_MIN_CONFIDENCE=0.7
 ALIVE_MODELS_SER_MODEL_REPO=hughlan1214/Speech_Emotion_Recognition_wav2vec2-large-xlsr-53_240304_SER_fine-tuned2.0
 ALIVE_MODELS_NLP_MODEL_REPO=SamLowe/roberta-base-go_emotions-onnx
 ALIVE_MODELS_NLP_MODEL_FILE=onnx/model_quantized.onnx
+ALIVE_MODELS_LID_MODEL_REPO=cis-lmu/glotlid
+ALIVE_MODELS_LID_MODEL_FILE=model.bin
+ALIVE_MODELS_TTS_MODEL_REPO=microsoft/speecht5_tts
 #
+# Other repos to try:
+# ALIVE_MODELS_LID_MODEL_REPO=facebook/fasttext-language-identification
+# ALIVE_MODELS_TTS_MODEL_REPO=microsoft/speecht5_tts
+# ALIVE_MODELS_TTS_MODEL_REPO=facebook/fastspeech2-en-ljspeech
+# ALIVE_MODELS_TTS_MODEL_REPO=facebook/fastspeech2-en-200_speaker-cv4
+# ALIVE_MODELS_TTS_MODEL_REPO=suno/bark-small
+# ALIVE_MODELS_TTS_MODEL_REPO=collabora/whisperspeech:s2a-q4-tiny-en+pl.model
+# ALIVE_MODELS_TTS_MODEL_REPO=parler-tts/parler_tts_mini_v0.1
+# ALIVE_MODELS_TTS_MODEL_REPO=facebook/hf-seamless-m4t-medium
+# ALIVE_MODELS_TTS_MODEL_REPO=seamless-m4t-v2-large
 # we probably don't want to need to change these
 # they are for the url path construction: "/v2/models/{model_name}/versions/{model_version}/infer"
 ALIVE_MODELS_ASR_MODEL_NAME=asr
@@ -36,6 +49,12 @@ ALIVE_MODELS_SER_MODEL_VERSION=1
 #
 ALIVE_MODELS_NLP_MODEL_NAME=nlp
 ALIVE_MODELS_NLP_MODEL_VERSION=1
+#
+ALIVE_MODELS_TTS_MODEL_NAME=tts
+ALIVE_MODELS_TTS_MODEL_VERSION=1
+#
+ALIVE_MODELS_LID_MODEL_NAME=lid
+ALIVE_MODELS_LID_MODEL_VERSION=1
 #
 # other pytriton related vars
 #
@@ -66,7 +85,7 @@ CONTAINER_NAME=alive_models
 # leave the tag empty to make one based on the base nvcr.io/nvidia/... image (cuda version)
 # e.g. generated (cuda) tag: 12.4.1-devel-ubuntu22.04
 # generated: CONTAINER_TAG=0.0.1-cuda-12.4.1
-CONTAINER_TAG=0.0.1-cuda-12.4.1
+CONTAINER_TAG=
 # tags for base image:
 # https://catalog.ngc.nvidia.com/orgs/nvidia/containers/cuda/tags
 # nvcr.io/nvidia/cuda:12.4.1-devel-ubuntu22.04
@@ -85,33 +104,33 @@ ALIVE_MODELS_BASE_IMAGE=nvcr.io/nvidia/cuda:12.4.1-devel-ubuntu22.04
 # ###################################################################
 HELM_TEMPLATE_NAME=alive
 K8S_HELM_namespace=alive
-K8S_HELM_deployment.replicaCount=1
-K8S_HELM_deployment.image.repository=localhost:5000/alive_models
-K8S_HELM_deployment.image.tag=0.0.1-cuda-12.4.1
-K8S_HELM_deployment.image.pullSecret=
-K8S_HELM_deployment.image.pullPolicy=Always
-K8S_HELM_deployment.restartPolicy=Always
-K8S_HELM_deployment.failureThreshold=10
-K8S_HELM_deployment.initialDelaySeconds=30
-K8S_HELM_deployment.periodSeconds=10
-K8S_HELM_deployment.timeoutSeconds=5
-K8S_HELM_deployment.resources.useGPU=true
-K8S_HELM_deployment.resources.useMIG=false
-K8S_HELM_deployment.resources.numGPUs=1
-K8S_HELM_deployment.resources.migConfig.profile=mig-7g.40gb
-K8S_HELM_deployment.resources.requests.memory=2Gi
-K8S_HELM_deployment.resources.limits.memory=4Gi
-K8S_HELM_deployment.resources.requests.cpu=1
-K8S_HELM_deployment.resources.limits.cpu=2
-K8S_HELM_service.type=LoadBalancer
-K8S_HELM_service.http.enabled=true
-K8S_HELM_service.http.nodePort=30111
-K8S_HELM_service.grpc.enabled=true
-K8S_HELM_service.grpc.nodePort=30112
-K8S_HELM_service.metrics.enabled=true
-K8S_HELM_service.metrics.nodePort=30113
-K8S_HELM_service.sagemaker.enabled=false
-K8S_HELM_service.sagemaker.nodePort=30114
-K8S_HELM_pvc.enabled=true
-K8S_HELM_pvc.accessMode=ReadWriteOnce
-K8S_HELM_pvc.size=30Gi
+K8S_HELM_deployment_replicaCount=1
+K8S_HELM_deployment_image_repository=localhost:5000/alive_models
+K8S_HELM_deployment_image_tag=0.0.1-cuda-12.4.1
+K8S_HELM_deployment_image_pullSecret=
+K8S_HELM_deployment_image_pullPolicy=Always
+K8S_HELM_deployment_restartPolicy=Always
+K8S_HELM_deployment_failureThreshold=10
+K8S_HELM_deployment_initialDelaySeconds=30
+K8S_HELM_deployment_periodSeconds=10
+K8S_HELM_deployment_timeoutSeconds=5
+K8S_HELM_deployment_resources_useGPU=true
+K8S_HELM_deployment_resources_useMIG=false
+K8S_HELM_deployment_resources_numGPUs=1
+K8S_HELM_deployment_resources_migConfig_profile=mig-7g.40gb
+K8S_HELM_deployment_resources_requests_memory=2Gi
+K8S_HELM_deployment_resources_limits_memory=4Gi
+K8S_HELM_deployment_resources_requests_cpu=1
+K8S_HELM_deployment_resources_limits_cpu=2
+K8S_HELM_service_type=LoadBalancer
+K8S_HELM_service_http_enabled=true
+K8S_HELM_service_http_nodePort=30111
+K8S_HELM_service_grpc_enabled=true
+K8S_HELM_service_grpc_nodePort=30112
+K8S_HELM_service_metrics_enabled=true
+K8S_HELM_service_metrics_nodePort=30113
+K8S_HELM_service_sagemaker_enabled=false
+K8S_HELM_service_sagemaker_nodePort=30114
+K8S_HELM_pvc_enabled=true
+K8S_HELM_pvc_accessMode=ReadWriteOnce
+K8S_HELM_pvc_size=30Gi
