--- a/deploy/compose/compose.example.yaml
+++ b/deploy/compose/compose.example.yaml
@@ -10,7 +10,7 @@ services:
     container_name: "${CONTAINER_NAME:-alive-models}-init"
     init: true
     environment: &alive-models-env
-      ALIVE_MODELS: "${ALIVE_MODELS:-asr,fer,ser,nlp}"
+      ALIVE_MODELS: "${ALIVE_MODELS:-asr,fer,ser,nlp,lid}"
       ALIVE_MODELS_HTTP_PORT: "${ALIVE_MODELS_HTTP_PORT:-8000}"
       ALIVE_MODELS_GRPC_PORT: "${ALIVE_MODELS_GRPC_PORT:-8001}"
       ALIVE_MODELS_METRICS_PORT: "${ALIVE_MODELS_METRICS_PORT:-8002}"
@@ -19,6 +19,9 @@ services:
       ALIVE_MODELS_SER_MODEL_REPO: "${ALIVE_MODELS_SER_MODEL_REPO:-hughlan1214/Speech_Emotion_Recognition_wav2vec2-large-xlsr-53_240304_SER_fine-tuned2.0}"
       ALIVE_MODELS_NLP_MODEL_REPO: "${ALIVE_MODELS_NLP_MODEL_REPO:-SamLowe/roberta-base-go_emotions-onnx}"
       ALIVE_MODELS_NLP_MODEL_FILE: "${ALIVE_MODELS_NLP_MODEL_FILE:-onnx/model_quantized.onnx}"
+      ALIVE_MODELS_TTS_MODEL_REPO: "${ALIVE_MODELS_TTS_MODEL_REPO:-microsoft/speecht5_tts}"
+      ALIVE_MODELS_LID_MODEL_REPO: "${ALIVE_MODELS_LID_MODEL_REPO:-cis-lmu/glotlid}"
+      ALIVE_MODELS_LID_MODEL_FILE: "${ALIVE_MODELS_LID_MODEL_FILE:-model.bin}"
       ALIVE_MODELS_ASR_MODEL_NAME: "${ALIVE_MODELS_ASR_MODEL_NAME:-asr}"
       ALIVE_MODELS_ASR_MODEL_VERSION: "${ALIVE_MODELS_ASR_MODEL_VERSION:-1}"
       ALIVE_MODELS_FER_MODEL_NAME: "${ALIVE_MODELS_FER_MODEL_NAME:-fer}"
@@ -29,6 +32,10 @@ services:
       ALIVE_MODELS_SER_MODEL_VERSION: "${ALIVE_MODELS_SER_MODEL_VERSION:-1}"
       ALIVE_MODELS_NLP_MODEL_NAME: "${ALIVE_MODELS_NLP_MODEL_NAME:-nlp}"
       ALIVE_MODELS_NLP_MODEL_VERSION: "${ALIVE_MODELS_NLP_MODEL_VERSION:-1}"
+      ALIVE_MODELS_TTS_MODEL_NAME: "${ALIVE_MODELS_TTS_MODEL_NAME:-tts}"
+      ALIVE_MODELS_TTS_MODEL_VERSION: "${ALIVE_MODELS_TTS_MODEL_VERSION:-1}"
+      ALIVE_MODELS_LID_MODEL_NAME: "${ALIVE_MODELS_LID_MODEL_NAME:-lid}"
+      ALIVE_MODELS_LID_MODEL_VERSION: "${ALIVE_MODELS_LID_MODEL_VERSION:-1}"
       ALIVE_MODELS_ALLOW_HTTP: "${ALIVE_MODELS_ALLOW_HTTP:-true}"
       ALIVE_MODELS_ALLOW_GRPC: "${ALIVE_MODELS_ALLOW_GRPC:-true}"
       ALIVE_MODELS_ALLOW_METRICS: "${ALIVE_MODELS_ALLOW_METRICS:-true}"
