--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,52 @@
 # ####################################################################
 # App Config
 # ####################################################################
+# models to load
 ALIVE_MODELS=asr,fer,ser,nlp,tts
 # comma separated list of models to load
 # empty string means load all models
 # depending on the gpu memory and the models,
 # we might not be able to load all models at the same machine
 #
-# the ports pytriton uses by default
-#
-ALIVE_MODELS_HTTP_PORT=8000
-ALIVE_MODELS_GRPC_PORT=8001
-ALIVE_MODELS_METRICS_PORT=8002
-ALIVE_MODELS_SAGEMAKER_PORT=8080
-#
-# things we might want to change (regarding the models to use)
-#
+# ####################################################################
+# ASR
+# ####################################################################
 ALIVE_MODELS_ASR_MODEL_SIZE=distil-large-v3
+# ALIVE_MODELS_ASR_MODEL_SIZE=large-v3
+ALIVE_MODELS_ASR_MODEL_NAME=asr
+ALIVE_MODELS_ASR_MODEL_VERSION=1
+# ####################################################################
+# FER
+# ####################################################################
 ALIVE_MODELS_FER_MODEL_DETECTOR_BACKEND=yolov8
 ALIVE_MODELS_FER_MODEL_FACE_MIN_CONFIDENCE=0.7
-ALIVE_MODELS_SER_MODEL_REPO=hughlan1214/Speech_Emotion_Recognition_wav2vec2-large-xlsr-53_240304_SER_fine-tuned2.0
+ALIVE_MODELS_FER_MODEL_NAME=fer
+ALIVE_MODELS_FER_MODEL_VERSION=1
+# ####################################################################
+# LID
+# ####################################################################
+ALIVE_MODELS_LID_MODEL_REPO=cis-lmu/glotlid
+# ALIVE_MODELS_LID_MODEL_REPO=facebook/fasttext-language-identification
+ALIVE_MODELS_LID_MODEL_FILE=model.bin
+ALIVE_MODELS_LID_MODEL_NAME=lid
+ALIVE_MODELS_LID_MODEL_VERSION=1
+# ####################################################################
+# NLP
+# ####################################################################
 ALIVE_MODELS_NLP_MODEL_REPO=SamLowe/roberta-base-go_emotions-onnx
 ALIVE_MODELS_NLP_MODEL_FILE=onnx/model_quantized.onnx
-ALIVE_MODELS_LID_MODEL_REPO=cis-lmu/glotlid
-ALIVE_MODELS_LID_MODEL_FILE=model.bin
+ALIVE_MODELS_NLP_MODEL_NAME=nlp
+ALIVE_MODELS_NLP_MODEL_VERSION=1
+# ####################################################################
+# SER
+# ####################################################################
+ALIVE_MODELS_SER_MODEL_REPO=hughlan1214/Speech_Emotion_Recognition_wav2vec2-large-xlsr-53_240304_SER_fine-tuned2.0
+ALIVE_MODELS_SER_MODEL_NAME=ser
+ALIVE_MODELS_SER_MODEL_VERSION=1
+# ####################################################################
+# TTS
+# ####################################################################
 ALIVE_MODELS_TTS_MODEL_REPO=microsoft/speecht5_tts
-#
-# Other repos to try:
-# ALIVE_MODELS_LID_MODEL_REPO=facebook/fasttext-language-identification
 # ALIVE_MODELS_TTS_MODEL_REPO=microsoft/speecht5_tts
 # ALIVE_MODELS_TTS_MODEL_REPO=facebook/fastspeech2-en-ljspeech
 # ALIVE_MODELS_TTS_MODEL_REPO=facebook/fastspeech2-en-200_speaker-cv4
@@ -36,27 +55,16 @@ ALIVE_MODELS_TTS_MODEL_REPO=microsoft/speecht5_tts
 # ALIVE_MODELS_TTS_MODEL_REPO=parler-tts/parler_tts_mini_v0.1
 # ALIVE_MODELS_TTS_MODEL_REPO=facebook/hf-seamless-m4t-medium
 # ALIVE_MODELS_TTS_MODEL_REPO=seamless-m4t-v2-large
-# we probably don't want to need to change these
-# they are for the url path construction: "/v2/models/{model_name}/versions/{model_version}/infer"
-ALIVE_MODELS_ASR_MODEL_NAME=asr
-ALIVE_MODELS_ASR_MODEL_VERSION=1
-#
-ALIVE_MODELS_FER_MODEL_NAME=fer
-ALIVE_MODELS_FER_MODEL_VERSION=1
-#
-ALIVE_MODELS_SER_MODEL_NAME=ser
-ALIVE_MODELS_SER_MODEL_VERSION=1
-#
-ALIVE_MODELS_NLP_MODEL_NAME=nlp
-ALIVE_MODELS_NLP_MODEL_VERSION=1
-#
 ALIVE_MODELS_TTS_MODEL_NAME=tts
 ALIVE_MODELS_TTS_MODEL_VERSION=1
-#
-ALIVE_MODELS_LID_MODEL_NAME=lid
-ALIVE_MODELS_LID_MODEL_VERSION=1
-#
-# other pytriton related vars
+# ####################################################################
+# Triton
+# ####################################################################
+# the ports pytriton uses by default
+ALIVE_MODELS_HTTP_PORT=8000
+ALIVE_MODELS_GRPC_PORT=8001
+ALIVE_MODELS_METRICS_PORT=8002
+ALIVE_MODELS_SAGEMAKER_PORT=8080
 #
 ALIVE_MODELS_ALLOW_HTTP=true
 ALIVE_MODELS_ALLOW_GRPC=true
@@ -118,10 +126,10 @@ K8S_HELM_deployment_resources_useGPU=true
 K8S_HELM_deployment_resources_useMIG=false
 K8S_HELM_deployment_resources_numGPUs=1
 K8S_HELM_deployment_resources_migConfig_profile=mig-7g.40gb
-K8S_HELM_deployment_resources_requests_memory=2Gi
-K8S_HELM_deployment_resources_limits_memory=4Gi
-K8S_HELM_deployment_resources_requests_cpu=1
-K8S_HELM_deployment_resources_limits_cpu=2
+K8S_HELM_deployment_resources_requests_memory=8Gi
+K8S_HELM_deployment_resources_limits_memory=16Gi
+K8S_HELM_deployment_resources_requests_cpu=4
+K8S_HELM_deployment_resources_limits_cpu=8
 K8S_HELM_service_type=LoadBalancer
 K8S_HELM_service_http_enabled=true
 K8S_HELM_service_http_nodePort=30111
@@ -133,4 +141,4 @@ K8S_HELM_service_sagemaker_enabled=false
 K8S_HELM_service_sagemaker_nodePort=30114
 K8S_HELM_pvc_enabled=true
 K8S_HELM_pvc_accessMode=ReadWriteOnce
-K8S_HELM_pvc_size=30Gi
+K8S_HELM_pvc_size=120Gi
