--- a/deploy/k8s/manifest.example.yaml
+++ b/deploy/k8s/manifest.example.yaml
@@ -21,7 +21,7 @@ spec:
       restartPolicy: Always
       containers:
         - name: alive-container
-          image: localhost:5000/alive_models:latest-cuda-12.4.1
+          image: localhost:5000/alive_models:0.0.1-cuda-12.4.1
           imagePullPolicy: Always
           ports:
             - name: http
@@ -65,7 +65,7 @@ spec:
               mountPath: /opt/ml/data
       initContainers:
         - name: alive-init-container
-          image: localhost:5000/alive_models:latest-cuda-12.4.1
+          image: localhost:5000/alive_models:0.0.1-cuda-12.4.1
           imagePullPolicy: Always
           args: ["/opt/ml/init.sh"]
           resources:
@@ -100,7 +100,7 @@ metadata:
   name: alive-configmap
   namespace: alive
 data:
-  ALIVE_MODELS: "asr,fer,ser,nlp"
+  ALIVE_MODELS: "asr,fer,ser,nlp,tts,lid"
   ALIVE_MODELS_ALLOW_GRPC: "true"
   ALIVE_MODELS_ALLOW_HTTP: "true"
   ALIVE_MODELS_ALLOW_METRICS: "true"
@@ -119,6 +119,10 @@ data:
   ALIVE_MODELS_GRPC_USE_SSL: "false"
   ALIVE_MODELS_GRPC_USE_SSL_MUTUAL: "false"
   ALIVE_MODELS_HTTP_PORT: "8000"
+  ALIVE_MODELS_LID_MODEL_FILE: "model.bin"
+  ALIVE_MODELS_LID_MODEL_NAME: "lid"
+  ALIVE_MODELS_LID_MODEL_REPO: "cis-lmu/glotlid"
+  ALIVE_MODELS_LID_MODEL_VERSION: "1"
   ALIVE_MODELS_METRICS_PORT: "8002"
   ALIVE_MODELS_NLP_MODEL_FILE: "onnx/model_quantized.onnx"
   ALIVE_MODELS_NLP_MODEL_NAME: "nlp"
@@ -128,6 +132,9 @@ data:
   ALIVE_MODELS_SER_MODEL_NAME: "ser"
   ALIVE_MODELS_SER_MODEL_REPO: "hughlan1214/Speech_Emotion_Recognition_wav2vec2-large-xlsr-53_240304_SER_fine-tuned2.0"
   ALIVE_MODELS_SER_MODEL_VERSION: "1"
+  ALIVE_MODELS_TTS_MODEL_NAME: "tts"
+  ALIVE_MODELS_TTS_MODEL_REPO: "microsoft/speecht5_tts"
+  ALIVE_MODELS_TTS_MODEL_VERSION: "1"
   NVIDIA_VISIBLE_DEVICES: "nvidia.com/gpu=all"
 ---
 # Source: alive-models/templates/pvc.yaml
