--- a/examples/requirements.txt
+++ b/examples/requirements.txt
@@ -1,5 +1,6 @@
 Pillow==10.4.0
+PyObjC==10.3.1; sys_platform == 'darwin'
 av==12.2.0
 httpx==0.27.0
 playsound==1.3.0
-pygobject==3.48.2
+pygobject==3.48.2; sys_platform == 'linux'
