update build tags and container labels

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,7 @@
     "huggingface",
     "hughlan",
     "imshow",
+    "Kasnesis",
     "ljspeech",
     "logprob",
     "Matthijs",
@@ -67,6 +68,8 @@
     "onnx",
     "onnxruntime",
     "openai",
+    "opencontainers",
+    "Panagiotis",
     "parler",
     "playbin",
     "playsound",
