--- a/.env.example
+++ b/.env.example
@@ -96,13 +96,14 @@ CONTAINER_NAME=alive_models
 CONTAINER_TAG=
 # tags for base image:
 # https://catalog.ngc.nvidia.com/orgs/nvidia/containers/cuda/tags
+# nvcr.io/nvidia/cuda:12.5.0-devel-ubuntu22.04
 # nvcr.io/nvidia/cuda:12.4.1-devel-ubuntu22.04
 # nvcr.io/nvidia/cuda:12.3.2-devel-ubuntu22.04
 # nvcr.io/nvidia/cuda:12.2.2-devel-ubuntu22.04
 # nvcr.io/nvidia/cuda:12.1.1-devel-ubuntu22.04
 #
 # default/latest: nvcr.io/nvidia/cuda:12.4.1-devel-ubuntu22.04
-ALIVE_MODELS_BASE_IMAGE=nvcr.io/nvidia/cuda:12.4.1-devel-ubuntu22.04
+ALIVE_MODELS_BASE_IMAGE=nvcr.io/nvidia/cuda:12.5.0-devel-ubuntu22.04
 #
 # ##################################################################
 # helm/k8s
