TTS: add orca, edge_tts, azure

--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,10 @@ ALIVE_MODELS_SER_MODEL_VERSION=1
 # ####################################################################
 # TTS
 # ####################################################################
+ALIVE_MODELS_TTS_MODEL_NAME=tts
+ALIVE_MODELS_TTS_MODEL_VERSION=1
+ALIVE_MODELS_TTS_MODEL_SAMPLE_RATE=16000
+# repos:
 ALIVE_MODELS_TTS_MODEL_REPO=microsoft/speecht5_tts
 # ALIVE_MODELS_TTS_MODEL_REPO=microsoft/speecht5_tts
 # ALIVE_MODELS_TTS_MODEL_REPO=facebook/fastspeech2-en-ljspeech
@@ -55,8 +59,22 @@ ALIVE_MODELS_TTS_MODEL_REPO=microsoft/speecht5_tts
 # ALIVE_MODELS_TTS_MODEL_REPO=parler-tts/parler_tts_mini_v0.1
 # ALIVE_MODELS_TTS_MODEL_REPO=facebook/hf-seamless-m4t-medium
 # ALIVE_MODELS_TTS_MODEL_REPO=seamless-m4t-v2-large
-ALIVE_MODELS_TTS_MODEL_NAME=tts
-ALIVE_MODELS_TTS_MODEL_VERSION=1
+# ALIVE_MODELS_TTS_MODEL_REPO=azure
+#
+# TTS: microsoft/speecht5_tts related
+ALIVE_MODELS_TTS_MODEL_VOCODER=microsoft/speecht5_hifigan
+ALIVE_MODELS_TTS_MODEL_EMBEDDINGS_DATASET=Matthijs/cmu-arctic-xvectors
+#
+# TTS: edge_tts related
+ALIVE_MODELS_TTS_MODEL_RATE=+0%
+ALIVE_MODELS_TTS_MODEL_PITCH=+0Hz
+ALIVE_MODELS_TTS_MODEL_VOLUME=+0%
+#
+# TTS: azure related
+ALIVE_MODELS_TTS_AZURE_REGION=
+ALIVE_MODELS_TTS_AZURE_KEY=
+# TTS: pvorca related
+ALIVE_MODELS_TTS_ORCA_KEY=
 # ####################################################################
 # Triton
 # ####################################################################
