--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,15 +17,20 @@
       "tag:yaml.org,2002:python/name:pymdownx.superfences.fence_code_format",
   ],
   "cSpell.words": [
+    "Apim",
     "apiserver",
     "argmax",
+    "asgiref",
+    "audioduration",
     "autohide",
     "autorefs",
+    "backgroundaudio",
     "bettertransformer",
     "bfill",
     "Cnnlstm",
     "codehilite",
     "coedit",
+    "cognitiveservices",
     "containerfile",
     "cpus",
     "crossrefs",
@@ -35,6 +40,7 @@
     "deepface",
     "devel",
     "distil",
+    "fadein",
     "fairseq",
     "fastspeech",
     "fasttext",
@@ -54,10 +60,14 @@
     "hughlan",
     "imshow",
     "Kasnesis",
+    "librosa",
     "ljspeech",
     "logprob",
     "Matthijs",
+    "maxsplit",
+    "mesg",
     "mklink",
+    "mstts",
     "multimodal",
     "nans",
     "ngram",
@@ -92,10 +102,13 @@
     "softcatala",
     "softmax",
     "soundfile",
+    "speechsdk",
     "speecht",
     "spkr",
     "spkrs",
+    "ssml",
     "startfile",
+    "styledegree",
     "superfences",
     "SYSTRAN",
     "termynal",
@@ -103,9 +116,12 @@
     "thingenious",
     "tobytes",
     "torchaudio",
+    "ttsembedding",
     "unsqueeze",
     "venv",
+    "viseme",
     "VOXPOPULI",
+    "westeurope",
     "xlsr",
     "xvector",
     "xvectors",
