--- a/deploy/compose/compose.example.yaml
+++ b/deploy/compose/compose.example.yaml
@@ -39,6 +39,14 @@ services:
       ALIVE_MODELS_TTS_MODEL_REPO: "${ALIVE_MODELS_TTS_MODEL_REPO:-microsoft/speecht5_tts}"
       ALIVE_MODELS_TTS_MODEL_NAME: "${ALIVE_MODELS_TTS_MODEL_NAME:-tts}"
       ALIVE_MODELS_TTS_MODEL_VERSION: "${ALIVE_MODELS_TTS_MODEL_VERSION:-1}"
+      ALIVE_MODELS_TTS_MODEL_VOCODER: "${ALIVE_MODELS_TTS_MODEL_VOCODER:-microsoft/speecht5_hifigan}"
+      ALIVE_MODELS_TTS_MODEL_EMBEDDINGS_DATASET: "${ALIVE_MODELS_TTS_MODEL_EMBEDDINGS_DATASET:-Matthijs/cmu-arctic-xvectors}"
+      ALIVE_MODELS_TTS_MODEL_RATE: "${ALIVE_MODELS_TTS_MODEL_RATE:-+0%}"
+      ALIVE_MODELS_TTS_MODEL_PITCH: "${ALIVE_MODELS_TTS_MODEL_PITCH:-+0Hz}"
+      ALIVE_MODELS_TTS_MODEL_VOLUME: "${ALIVE_MODELS_TTS_MODEL_VOLUME:-+0%}"
+      ALIVE_MODELS_TTS_AZURE_REGION: "${ALIVE_MODELS_TTS_AZURE_REGION:-}"
+      ALIVE_MODELS_TTS_AZURE_KEY: "${ALIVE_MODELS_TTS_AZURE_KEY:-}"
+      ALIVE_MODELS_TTS_ORCA_KEY: "${ALIVE_MODELS_TTS_ORCA_KEY:-}"
       # Triton
       ALIVE_MODELS_HTTP_PORT: "${ALIVE_MODELS_HTTP_PORT:-8000}"
       ALIVE_MODELS_GRPC_PORT: "${ALIVE_MODELS_GRPC_PORT:-8001}"
