--- a/deploy/k8s/alive-models/values.yaml
+++ b/deploy/k8s/alive-models/values.yaml
@@ -59,6 +59,14 @@ env:
   ALIVE_MODELS_NLP_MODEL_REPO: SamLowe/roberta-base-go_emotions-onnx
   ALIVE_MODELS_NLP_MODEL_FILE: onnx/model_quantized.onnx
   ALIVE_MODELS_TTS_MODEL_REPO: microsoft/speecht5_tts
+  ALIVE_MODELS_TTS_MODEL_VOCODER: microsoft/speecht5_hifigan
+  ALIVE_MODELS_TTS_MODEL_EMBEDDINGS_DATASET: Matthijs/cmu-arctic-xvectors
+  ALIVE_MODELS_TTS_MODEL_RATE: +0%
+  ALIVE_MODELS_TTS_MODEL_PITCH: +0Hz
+  ALIVE_MODELS_TTS_MODEL_VOLUME: +0%
+  ALIVE_MODELS_TTS_AZURE_REGION: ""
+  ALIVE_MODELS_TTS_AZURE_KEY: ""
+  ALIVE_MODELS_TTS_ORCA_KEY: ""
   ALIVE_MODELS_LID_MODEL_REPO: cis-lmu/glotlid
   ALIVE_MODELS_LID_MODEL_FILE: model.bin
   ALIVE_MODELS_ASR_MODEL_NAME: asr
