--- a/deploy/k8s/manifest.example.yaml
+++ b/deploy/k8s/manifest.example.yaml
@@ -135,6 +135,14 @@ data:
   ALIVE_MODELS_TTS_MODEL_NAME: "tts"
   ALIVE_MODELS_TTS_MODEL_REPO: "microsoft/speecht5_tts"
   ALIVE_MODELS_TTS_MODEL_VERSION: "1"
+  ALIVE_MODELS_TTS_MODEL_VOCODER: microsoft/speecht5_hifigan
+  ALIVE_MODELS_TTS_MODEL_EMBEDDINGS_DATASET: Matthijs/cmu-arctic-xvectors
+  ALIVE_MODELS_TTS_MODEL_RATE: +0%
+  ALIVE_MODELS_TTS_MODEL_PITCH: +0Hz
+  ALIVE_MODELS_TTS_MODEL_VOLUME: +0%
+  ALIVE_MODELS_TTS_AZURE_REGION: ""
+  ALIVE_MODELS_TTS_AZURE_KEY: ""
+  ALIVE_MODELS_TTS_ORCA_KEY: ""
   NVIDIA_VISIBLE_DEVICES: "nvidia.com/gpu=all"
 ---
 # Source: alive-models/templates/pvc.yaml
