--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,9 +31,12 @@ dependencies = [
     #    $> sed -i 's/PyYAML>=5.1.*/PyYAML>=5.1/' omegaconf/requirements/base.txt
     #    $> pip install ./omegaconf
     'accelerate==0.32.1',
+    'asgiref==3.8.1',
+    'azure-cognitiveservices-speech==1.38.0',
     'ctranslate2==4.3.1',
     'cython==3.0.10',
     'deepface==0.0.92',
+    'edge_tts==6.1.12',
     'fairseq==0.12.2',
     'faster-whisper==1.0.3',
     'fasttext==0.9.3',
@@ -46,6 +49,7 @@ dependencies = [
     'onnxruntime-gpu==1.18.1',
     'openai-whisper==20231117',
     'optimum==1.21.2',
+    'pvorca==0.2.3',
     'soundfile==0.12.1',
     'tensorflow==2.16.2',
     'tf-keras==2.16.0',
