update .env.example, config

--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,13 @@
 # App Config
 # ####################################################################
 # models to load
-ALIVE_MODELS=asr,fer,ser,nlp,tts
+ALIVE_MODELS=asr,fer,ser,nlp,tts,lid
 # comma separated list of models to load
 # empty string means load all models
 # depending on the gpu memory and the models,
 # we might not be able to load all models at the same machine
 #
+USE_FLASH_ATTENTION=true
 # ####################################################################
 # ASR
 # ####################################################################
