update deployment vars: add USE_FLASH_ATTENTION

--- a/deploy/k8s/alive-models/values.yaml
+++ b/deploy/k8s/alive-models/values.yaml
@@ -48,6 +48,7 @@ pvc:
   size: 120Gi
 env:
   ALIVE_MODELS: "asr,fer,ser,nlp,tts,lid"
+  USE_FLASH_ATTENTION: true
   ALIVE_MODELS_HTTP_PORT: 8000
   ALIVE_MODELS_GRPC_PORT: 8001
   ALIVE_MODELS_METRICS_PORT: 8002
