--- a/deploy/compose/compose.example.yaml
+++ b/deploy/compose/compose.example.yaml
@@ -12,6 +12,7 @@ services:
     environment: &alive-models-env
       # models to load
       ALIVE_MODELS: "${ALIVE_MODELS:-asr,fer,ser,nlp,lid}"
+      USE_FLASH_ATTENTION: "${USE_FLASH_ATTENTION:-true}"
       # ASR
       ALIVE_MODELS_ASR_MODEL_NAME: "${ALIVE_MODELS_ASR_MODEL_NAME:-asr}"
       ALIVE_MODELS_ASR_MODEL_VERSION: "${ALIVE_MODELS_ASR_MODEL_VERSION:-1}"
